# amp

./: Cargo.toml  justfile
.agents/skills/code-review/: SKILL.md
.config/: nextest.toml
crates/clients/admin/src/: jobs.rs
crates/config/src/: worker_core.rs
crates/controller-admin-datasets/: Cargo.toml
crates/controller-admin-datasets/src/: common.rs  ctx.rs  lib.rs  schema.rs
crates/controller-admin-datasets/src/datasets/: handlers.rs
crates/controller-admin-datasets/src/datasets/handlers/: delete.rs  delete_version.rs  get.rs  get_all.rs  get_manifest.rs  list_all.rs  list_versions.rs  register.rs
crates/controller-admin-datasets/src/manifests/handlers/: delete_by_id.rs  get_by_id.rs  list_all.rs  list_datasets.rs  prune.rs  register.rs
crates/controller-admin-providers/: Cargo.toml
crates/controller-admin-providers/src/: ctx.rs  lib.rs  providers.rs
crates/controller-admin-providers/src/providers/handlers/: create.rs  delete_by_id.rs  get_by_id.rs
crates/controller-admin-system/: Cargo.toml
crates/controller-admin-system/src/: ctx.rs  lib.rs  workers.rs
crates/controller-admin-system/src/workers/: worker_service.rs
crates/controller-admin-system/src/workers/handlers/: get_all.rs  get_by_id.rs
crates/controller-admin-tables/: Cargo.toml
crates/controller-admin-tables/src/: ctx.rs  lib.rs  revisions.rs
crates/controller-admin-tables/src/datasets/: handlers.rs
crates/controller-admin-tables/src/datasets/handlers/: restore.rs  restore_table.rs
crates/controller-admin-tables/src/files/handlers/: get_by_id.rs
crates/controller-admin-tables/src/revisions/: register_files.rs  revision_guard.rs
crates/controller-admin-tables/src/revisions/handlers/: activate.rs  create.rs  deactivate.rs  delete.rs  get_by_id.rs  list.rs  prune.rs  restore.rs  truncate.rs
crates/core/common/: Cargo.toml
crates/core/common/src/: amp_catalog_provider.rs  dataset_schema_provider.rs  datasets_cache.rs  incrementalizer.rs  lib.rs  physical_table.rs  rpc_catalog_provider.rs  sql.rs  streaming_query.rs
crates/core/common/src/catalog/: physical.rs
crates/core/common/src/catalog/physical/: block_num_filter.rs  for_query.rs  snapshot.rs
crates/core/common/src/context/: exec.rs  session_state.rs
crates/core/common/src/physical_table/: snapshot.rs  table.rs
crates/core/common/src/udfs/: eth_call.rs
crates/core/common/src/udfs/eth_call/: cache.rs  metrics.rs  udf.rs
crates/core/common/tests/: it_session_async_resolution.rs
crates/core/data-store/src/: lib.rs
crates/core/datasets-common/: Cargo.toml
crates/core/datasets-raw/src/: dataset_kind.rs  lib.rs  manifest.rs  tempo.rs
crates/core/datasets-raw/src/tempo/tables/: blocks.rs  transactions.rs
crates/core/metadata-db/src/: lib.rs
crates/core/monitoring/src/: logging.rs
crates/core/providers-evm-rpc/: Cargo.toml
crates/core/providers-evm-rpc/src/: client.rs  error.rs
crates/core/providers-solana/: Cargo.toml
crates/core/providers-solana/examples/: solana_car_download.rs  solana_compare.rs  solana_tx_meta_parsing.rs
crates/core/providers-solana/src/: client.rs  error.rs  of1_client.rs
crates/core/providers-solana/src/tables/: transactions.rs
crates/core/providers-tempo/: Cargo.toml
crates/core/providers-tempo/src/: client.rs  error.rs
crates/core/trace-report/: Cargo.toml
crates/core/trace-report/src/: flamegraph.rs  lib.rs  time.rs  tree.rs
crates/core/worker-core/: Cargo.toml
crates/core/worker-core/src/: jobs.rs  metrics.rs
crates/core/worker-core/src/compaction/: algorithm.rs  config.rs  plan.rs
crates/core/worker-core/src/jobs/: job_key.rs
crates/core/worker-datasets-derived/src/: job_key.rs
crates/core/worker-datasets-derived/src/job_impl/: table.rs
crates/core/worker-datasets-raw/src/: job_key.rs
crates/core/worker-gc/: Cargo.toml
crates/core/worker-gc/src/: job_ctx.rs  job_descriptor.rs  job_impl.rs  job_key.rs  job_kind.rs  lib.rs  metrics.rs
crates/extractors/solana-storage-proto/src/: lib.rs
crates/extractors/tempo/: Cargo.toml
crates/extractors/tempo/src/: lib.rs  tables.rs
crates/services/admin-api/: Cargo.toml
crates/services/admin-api/src/: ctx.rs  handlers.rs  lib.rs
crates/services/admin-api/src/handlers/: common.rs  datasets.rs  jobs.rs  schema.rs
crates/services/admin-api/src/handlers/datasets/: deploy.rs  register.rs
crates/services/admin-api/src/handlers/jobs/: create.rs
crates/services/admin-api/src/handlers/manifests/: register.rs
crates/services/controller/: Cargo.toml
crates/services/controller/src/: ctx.rs  lib.rs  router.rs  service.rs
crates/services/server/src/: flight.rs  jsonl.rs  metrics.rs
docs/: README.md  architecture.md  config.md  exes.md  glossary.md  metrics.md  modes.md  upgrading.md
docs/__meta__/: feat.md
docs/code/: extractors.md  rust-workspace.md  test-organization.md
docs/feat/: admin-manifest.md  admin-providers.md  app-ampctl.md  datasets-manifest.md  datasets-raw-tempo.md  datasets.md  provider-registry.md  provider-static.md  provider-tempo.md  provider.md  udf-builtin-evm-eth-call.md  verification.md
docs/schemas/config/: ampd.spec.json
docs/schemas/manifest/: README.md  raw.spec.json
docs/schemas/tables/: tempo.md
tests/: Cargo.toml
tests/config/manifests/: base_rpc.json  tempo.json
tests/config/providers/: rpc_eth_base.toml
tests/config/providers/per_tx_receipt/: rpc_eth_base.toml
tests/specs/: eth-call-tests.yaml  segment-pruning-anvil.yaml  streaming-join-block-num-eq-anvil.yaml
tests/src/: main.rs
tests/src/testlib/: ctx.rs
tests/src/tests/: it_admin_api_schema.rs  it_ampctl_gen_manifest.rs  it_functions_eth_call.rs  it_gc.rs  it_segment_pruning.rs  it_sql.rs  it_sql_dataset_batch_size.rs  it_streaming_join.rs  mod.rs
typescript/studio/src/: constants.ts
typescript/studio/src/services/sql/: AmpCompletionProvider.ts  UDFSnippetGenerator.ts  types.ts
typescript/studio/tests/services/sql/: core.test.ts
typescript/studio/tests/services/sql/fixtures/: mockQueries.ts  mockUDFs.ts
