[package]
name = "amp-controller-admin-datasets"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[features]
# OpenAPI schema generation via utoipa
utoipa = ["dep:utoipa"]

[dependencies]
amp-data-store = { path = "../core/data-store" }
amp-datasets-raw = { path = "../core/datasets-raw", package = "datasets-raw" }
amp-datasets-registry = { path = "../core/datasets-registry" }
axum.workspace = true
common = { path = "../core/common" }
datafusion.workspace = true
datasets-common = { path = "../core/datasets-common" }
datasets-derived = { path = "../core/datasets-derived" }
futures.workspace = true
metadata-db = { path = "../core/metadata-db" }
monitoring = { path = "../core/monitoring" }
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
thiserror.workspace = true
tracing.workspace = true
utoipa = { version = "5.4.0", features = ["axum_extras"], optional = true }
