[package]
name = "amp-controller-admin-providers"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[features]
# OpenAPI schema generation via utoipa
utoipa = ["dep:utoipa"]

[dependencies]
amp-providers-common = { path = "../core/providers-common" }
amp-providers-registry = { path = "../core/providers-registry" }
axum.workspace = true
monitoring = { path = "../core/monitoring" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
utoipa = { version = "5.4.0", features = ["axum_extras"], optional = true }
