[package]
name = "amp-providers-tempo"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[features]
# JSON Schema generation support for provider configuration validation.
schemars = ["dep:schemars", "amp-providers-common/schemars"]

[dependencies]
alloy.workspace = true
amp-providers-common = { path = "../providers-common" }
async-stream.workspace = true
datasets-common = { path = "../datasets-common" }
datasets-raw = { path = "../datasets-raw" }
futures.workspace = true
governor.workspace = true
headers.workspace = true
monitoring = { path = "../monitoring" }
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tempo-alloy = { git = "https://github.com/tempoxyz/tempo" }
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
