[package]
name = "trace-report"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flate2 = "1"
inferno = "0.12"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding = "2"
