[package]
name = "controller"
edition = "2024"
version.workspace = true
license-file.workspace = true

[features]
utoipa = ["dep:utoipa", "amp-controller-admin-datasets/utoipa", "amp-controller-admin-jobs/utoipa", "amp-controller-admin-providers/utoipa", "amp-controller-admin-system/utoipa", "amp-controller-admin-tables/utoipa"]

[dependencies]
amp-controller-admin-datasets = { path = "../../controller-admin-datasets" }
amp-controller-admin-jobs = { path = "../../controller-admin-jobs" }
amp-controller-admin-providers = { path = "../../controller-admin-providers" }
amp-controller-admin-system = { path = "../../controller-admin-system" }
amp-controller-admin-tables = { path = "../../controller-admin-tables" }
amp-data-store = { path = "../../core/data-store" }
amp-datasets-registry = { version = "0.1.0", path = "../../core/datasets-registry" }
amp-providers-registry = { version = "0.1.0", path = "../../core/providers-registry" }
amp-worker-core = { path = "../../core/worker-core" }
async-trait.workspace = true
axum.workspace = true
common = { path = "../../core/common" }
datasets-common = { version = "0.1.0", path = "../../core/datasets-common" }
metadata-db = { version = "0.1.0", path = "../../core/metadata-db" }
monitoring = { path = "../../core/monitoring" }
opentelemetry-instrumentation-tower = { version = "0.17.0", features = ["axum"] }
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
utoipa = { version = "5.4.0", features = ["axum_extras"], optional = true }
worker = { version = "0.1.0", path = "../worker" }
